syntax = "proto3";

package bookstore;

import "google/api/annotations.proto";

import "google/protobuf/empty.proto";

import "google/protobuf/descriptor.proto";

message Book {
  string author = 1;

  string name = 2;

  string title = 3;
}

message ListBooksResponse {
  repeated Book books = 1;
}

message ListShelvesResponse {
  repeated Shelf shelves = 1;
}

message Shelf {
  string name = 1;

  string theme = 2;
}

message Error {
  int32 code = 1;

  string message = 2;
}

message ListShelvesOK {
  ListShelvesResponse application_json = 1;
}

message ListShelvesResponses {
  ListShelvesOK ok = 1;
}

message CreateShelfRequestBody {
  Shelf application_json = 1;
}

message CreateShelfParameters {
  CreateShelfRequestBody request_body = 1;
}

message CreateShelfOK {
  Shelf application_json = 1;
}

message CreateShelfResponses {
  CreateShelfOK ok = 1;
}

message GetShelfParameters {
  int64 shelf = 1;
}

message GetShelfOK {
  Shelf application_json = 1;
}

message GetShelfDefault {
  Error application_json = 1;
}

message GetShelfResponses {
  GetShelfOK ok = 1;

  GetShelfDefault default = 2;
}

message DeleteShelfParameters {
  int64 shelf = 1;
}

message ListBooksParameters {
  int64 shelf = 1;
}

message ListBooksOK {
  ListBooksResponse application_json = 1;
}

message ListBooksDefault {
  Error application_json = 1;
}

message ListBooksResponses {
  ListBooksOK ok = 1;

  ListBooksDefault default = 2;
}

message CreateBookRequestBody {
  Book application_json = 1;
}

message CreateBookParameters {
  int64 shelf = 1;

  CreateBookRequestBody request_body = 2;
}

message CreateBookOK {
  Book application_json = 1;
}

message CreateBookDefault {
  Error application_json = 1;
}

message CreateBookResponses {
  CreateBookOK ok = 1;

  CreateBookDefault default = 2;
}

message GetBookParameters {
  int64 shelf = 1;

  int64 book = 2;
}

message GetBookOK {
  Book application_json = 1;
}

message GetBookDefault {
  Error application_json = 1;
}

message GetBookResponses {
  GetBookOK ok = 1;

  GetBookDefault default = 2;
}

message DeleteBookParameters {
  int64 shelf = 1;

  int64 book = 2;
}

service Bookstore {
  rpc ListShelves ( google.protobuf.Empty ) returns ( ListShelvesResponses ) {
    option (google.api.http) = { get:"/shelves"  };
  }

  rpc CreateShelf ( CreateShelfParameters ) returns ( CreateShelfResponses ) {
    option (google.api.http) = { post:"/shelves" body:"request_body"  };
  }

  rpc DeleteShelves ( google.protobuf.Empty ) returns ( google.protobuf.Empty ) {
    option (google.api.http) = { delete:"/shelves"  };
  }

  rpc GetShelf ( GetShelfParameters ) returns ( GetShelfResponses ) {
    option (google.api.http) = { get:"/shelves/{shelf}"  };
  }

  rpc DeleteShelf ( DeleteShelfParameters ) returns ( google.protobuf.Empty ) {
    option (google.api.http) = { delete:"/shelves/{shelf}"  };
  }

  rpc ListBooks ( ListBooksParameters ) returns ( ListBooksResponses ) {
    option (google.api.http) = { get:"/shelves/{shelf}/books"  };
  }

  rpc CreateBook ( CreateBookParameters ) returns ( CreateBookResponses ) {
    option (google.api.http) = { post:"/shelves/{shelf}/books" body:"request_body"  };
  }

  rpc GetBook ( GetBookParameters ) returns ( GetBookResponses ) {
    option (google.api.http) = { get:"/shelves/{shelf}/books/{book}"  };
  }

  rpc DeleteBook ( DeleteBookParameters ) returns ( google.protobuf.Empty ) {
    option (google.api.http) = { delete:"/shelves/{shelf}/books/{book}"  };
  }
}

